--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="homebtn">Home</a>
+        <a href="index.html" class="homebtn">Home</a>
         <a href="#">Education</a>
         <a href="#">Experience</a>
         <a href="#">Skills</a>
@@ -21,10 +21,15 @@
         </div>
 
         <div class="HomeText">
-            <h2>你好，我是</h2>
+            <h2>你好，我是...</h2>
             <h1>Jeffrey Ritchie Isman</h1>
-            <h2>Majoring in Computer Science</h2>
+            <h3>Majoring in Computer Science at New York University Shanghai</h3>
         </div>    
+
+        <div class="SocialMedia">
+
+        </div>
+
     </div>
 </body>
 </html>
